# alpha_expansion

./: .gitignore  AlphaExpansion_8hpp.html  AlphaExpansion_8hpp__dep__incl.md5  AlphaExpansion_8hpp__incl.map  AlphaExpansion_8hpp_source.html  BKSolver.hpp  BKSolver_8hpp__incl.map  BKSolver_8hpp__incl.md5  BKSolver_8hpp_source.html  CMakeLists.txt  Doxyfile  EnergyModel_8hpp.html  EnergyModel_8hpp__dep__incl.map  EnergyModel_8hpp__incl.map  EnergyModel_8hpp_source.html  ExpansionStrategy_8hpp.html  ExpansionStrategy_8hpp__dep__incl.map  ExpansionStrategy_8hpp__dep__incl.md5  GreedyStrategy_8hpp__incl.map  GreedyStrategy_8hpp__incl.md5  GreedyStrategy_8hpp_source.html  MaxFlowSolver.hpp  MaxFlowSolver_8hpp.html  MaxFlowSolver_8hpp__dep__incl.md5  MaxFlowSolver_8hpp__incl.md5  MaxFlowSolver_8hpp_source.html  ORToolsSolver_8hpp.html  ORToolsSolver_8hpp__incl.map  ORToolsSolver_8hpp__incl.md5  README.md  RandomizedStrategy_8hpp.html  RandomizedStrategy_8hpp__incl.md5  RandomizedStrategy_8hpp_source.html  SequentialStrategy_8hpp__incl.map  SequentialStrategy_8hpp__incl.md5  SequentialStrategy_8hpp_source.html  annotated.html  classAlphaExpansion-members.html  classAlphaExpansion.html  classBKSolver.html  (+58 more)
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: alpha_expansionConfig.cmake.in
demo/graphs/: three_cliques.edgelist  two_cliques.edgelist
demo/interactive_segmentation/: __main__.py  app.py  community.py  problem.py  segmentation.py
docs/guides/: architecture.md  custom-solver.md  custom-strategy.md  demo-app.md  getting-started.md  index.md  python-api.md
html/: AlphaExpansion_8hpp__dep__incl.map  AlphaExpansion_8hpp__incl.md5  BKSolver_8hpp.html  EnergyModel_8hpp__dep__incl.md5  EnergyModel_8hpp__incl.md5  EnergyModel_8hpp_source.html  ExpansionStrategy_8hpp_source.html  GreedyStrategy_8hpp.html  MaxFlowSolver_8hpp__dep__incl.map  MaxFlowSolver_8hpp__incl.map  ORToolsSolver_8hpp_source.html  RandomizedStrategy_8hpp__incl.map  RandomizedStrategy_8hpp_source.html  SequentialStrategy_8hpp.html  architecture_8md.html  classAlphaExpansion-members.html  classAlphaExpansion.html  classBKSolver-members.html  classEnergyModel-members.html  classEnergyModel.html  classExpansionStrategy.html  classExpansionStrategy__inherit__graph.map  classGreedyStrategy.html  classGreedyStrategy__coll__graph.map  classGreedyStrategy__inherit__graph.md5  classMaxFlowSolver.html  classORToolsSolver.html  classRandomizedStrategy-members.html  classRandomizedStrategy__inherit__graph.map  classes.html  custom-strategy_8md.html  dir_000000_000001.html  dir_000003_000000.html  dir_19373f467389307dc54ab8a6e9e19559.html  dir_19373f467389307dc54ab8a6e9e19559_dep.map  dir_19373f467389307dc54ab8a6e9e19559_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  (+15 more)
html/search/: all_0.js  all_1.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_2.js  classes_5.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_9.js  pages_4.js  pages_6.js  pages_7.js  pages_9.js  pages_a.js  searchdata.js  typedefs_0.js  typedefs_1.js
scripts/: ci_data.py  datasets.py  experiments.py  interactive_segmentation.py  run_community.py  run_initial_energy.py  run_middlebury.py  run_restoration.py  run_segmentation.py  run_worst_case.py  test_bindings.py  trace_alpha_expansion.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_5.js  files_7.js  files_a.js  files_b.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+9 more)
src/: AlphaExpansion.hpp  BKSolver.hpp  EnergyModel.hpp  GreedyStrategy.hpp  ORToolsSolver.hpp  RandomizedStrategy.hpp  SequentialStrategy.hpp  bindings.cpp  block.h  energy.h  graph.cpp  graph.h  instances.cpp
src/bindings/: bindings.cpp
src/bk_maxflow_impl/: block.h  energy.h  graph.cpp  graph.h  instances.cpp  maxflow.cpp
src/core/: AlphaExpansion.hpp  EnergyModel.hpp
src/solvers/: BKSolver.hpp  MaxFlowSolver.hpp  ORToolsSolver.hpp
src/strategies/: ExpansionStrategy.hpp  GreedyStrategy.hpp  RandomizedStrategy.hpp  SequentialStrategy.hpp
tests/: conftest.py  test_alpha_expansion.cpp  test_energy_model.cpp  tests.cpp
tests/demo/: test_community_problem.py
tests/scripts/: test_experiments.py  test_run_initial_energy_real_smoke.py  test_run_initial_energy_smoke.py  test_run_worst_case_smoke.py
